infra/k8s/catalog-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  labels:
    app: catalog-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: lemichael52/catalog-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3004
