infra/k8s/chat-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  replicas: 3
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: lemichael52/chat-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
