infra/k8s/catalog-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
spec:
  selector:
    app: catalog-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3004
  type: ClusterIP
