infra/k8s/chat-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  selector:
    app: chat-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3002
  type: ClusterIP
