infra/k8s/contribution-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: contribution-service
spec:
  selector:
    app: contribution-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
  type: ClusterIP
