infra/k8s/pipeline-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pipeline-service
spec:
  selector:
    app: pipeline-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3006
  type: ClusterIP
